[gd_scene load_steps=3 format=3 uid="uid://de2qo3u2jeq1"]

[ext_resource type="Script" path="res://script/menus/game_menu/contacts_menu.gd" id="1_287x6"]
[ext_resource type="Texture2D" uid="uid://bi0k3dd3frgkw" path="res://assets/menus/game menu/libreta_contactos.png" id="2_jg64c"]

[node name="contacts_menu" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_287x6")

[node name="background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -595.0
offset_top = -372.5
offset_right = 595.0
offset_bottom = 372.5
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_jg64c")

[node name="contacts_btn" type="TextureButton" parent="background"]
layout_mode = 0
offset_left = 20.0
offset_top = 49.5
offset_right = 55.0
offset_bottom = 99.5

[node name="maps_btn" type="TextureButton" parent="background"]
layout_mode = 0
offset_left = 5.0
offset_top = 104.5
offset_right = 40.0
offset_bottom = 154.5

[node name="items_btn" type="TextureButton" parent="background"]
layout_mode = 0
offset_left = 15.0
offset_top = 159.5
offset_right = 50.0
offset_bottom = 209.5

[node name="characters_btn" type="TextureButton" parent="background"]
layout_mode = 0
offset_left = 15.0
offset_top = 218.5
offset_right = 50.0
offset_bottom = 268.5

[node name="bar" type="Panel" parent="background"]
layout_mode = 0
offset_left = 105.0
offset_top = 129.5
offset_right = 519.0
offset_bottom = 685.5

[node name="NinePatchRect" type="NinePatchRect" parent="background"]
layout_mode = 0
offset_left = 108.0
offset_top = 142.5
offset_right = 108.0
offset_bottom = 142.5

[node name="GridContainer" type="GridContainer" parent="background/NinePatchRect"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/h_separation = 64
theme_override_constants/v_separation = 85
columns = 6

[node name="char_portrait" type="Panel" parent="background"]
layout_mode = 0
offset_left = 649.0
offset_top = 74.5
offset_right = 1119.0
offset_bottom = 344.5

[node name="portrait" type="TextureRect" parent="background/char_portrait"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
stretch_mode = 5

[node name="bar2" type="Panel" parent="background"]
layout_mode = 0
offset_left = 661.0
offset_top = 364.0
offset_right = 1112.0
offset_bottom = 609.0

[node name="character_info" type="RichTextLabel" parent="background/bar2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 6.0
offset_top = 5.0
offset_right = -5.0
offset_bottom = -5.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/normal_font_size = 30
text = "sdasdasdasdasdasdasdasdasdasdasdasdasdasdasdasdasdasdasda"

[connection signal="pressed" from="background/maps_btn" to="." method="_on_maps_btn_pressed"]
[connection signal="pressed" from="background/items_btn" to="." method="_on_items_btn_pressed"]
[connection signal="pressed" from="background/characters_btn" to="." method="_on_characters_btn_pressed"]
